--- a/sk/contact.html
+++ b/sk/contact.html
@@ -560,7 +560,7 @@
 
 
 		
-<p>Prosím kontaktujte <a href="mailto:lin4trans@users.sourceforge.net">koordinátora projektu OmegaT</a> ak máte akékoľvek pripomienky týkajúce sa administrácie.</p>
+<p>Prosím kontaktujte <a href="mailto:info@omegat.org">koordinátora projektu OmegaT</a> ak máte akékoľvek pripomienky týkajúce sa administrácie.</p>
 
 
 
