--- a/zh_TW/contact.html
+++ b/zh_TW/contact.html
@@ -222,7 +222,7 @@ and/or mailing lists.</p>
   </table>
   <br/>
   <h3>Administration</h3>
-  <p>Please contact the <a href="mailto:lin4trans@users.sourceforge.net">OmegaT project co-ordinator</a> regarding any administration issues.</p>
+  <p>Please contact the <a href="mailto:info@omegat.org">OmegaT project co-ordinator</a> regarding any administration issues.</p>
 </div>
 
 
