--- a/en/index.html
+++ b/en/index.html
@@ -291,8 +291,8 @@ translation", and you will have to look elsewhere for it.)</p>
 
     <div class="container-fluid versions">
       <ul class="list-group">
-        <li class="list-group-item"><span class="badge"><a href="download#standard">3.6.0 update 5</a></span> Standard Version</li>
-        <li class="list-group-item"><span class="badge"><a href="download#latest">4.1.1_Beta</a></span> Latest Version</li>
+        <li class="list-group-item"><span class="badge"><a href="download#standard">OmegaT 3.6.0 update 5</a></span> Standard Version</li>
+        <li class="list-group-item"><span class="badge"><a href="download#latest">OmegaT 4.1.2</a></span> Latest Version</li>
       </ul>
     </div>
   </div>
