--- a/fr/download.html
+++ b/fr/download.html
@@ -249,7 +249,7 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
 <h4>Profil utilisateur</h4>
 <p>Bien que l&#39;installation et l&#39;utilisation d&#39;OmegaT ne présentent pas de difficulté particulière, il est vivement recommandé de prendre connaissance de la documentation fournie et de suivre les instructions indiquées. Si, d&#39;une manière générale, vous avez une certaine aversion pour la lecture d&#39;instructions et que vous avez tendance à découvrir un logiciel en cliquant partout dans l&#39;attente que quelque chose ressemblant à l&#39;effet recherché se produise, alors OmegaT n&#39;est probablement pas le bon outil pour vous.</p>
 
-<h3 id="downloads">Version standard - 3.6.0 update 5</h3>
+<h3 id="downloads">Version standard - OmegaT 3.6.0 update 5</h3>
 
 <p>La version standard est la version normalement utilisée ; elle se distingue par sa fiabilité. La documentation qui l&#39;accompagne est relativement à jour, du moins en ce qui concerne la documentation en anglais. Elle n&#39;intègre cependant pas toutes les fonctionnalités de la version « récente ».</p>
 
@@ -264,44 +264,44 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
   <tbody><tr id="standard_windows_jre">
       <td class="version-name">Windows avec JRE</td>
       <td></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0%20update%205/OmegaT_3.6.0_05_Windows.exe/download" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 5/OmegaT_3.6.0_05_Windows.exe/download" role="button">Download</a></td></td>
   </tr><tr id="standard_windows_nojre">
       <td class="version-name">Windows sans JRE</td>
       <td></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0%20update%205/OmegaT_3.6.0_05_Windows_without_JRE.exe/download" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 5/OmegaT_3.6.0_05_Windows_without_JRE.exe/download" role="button">Download</a></td></td>
   </tr><tr id="standard_osx_signed">
       <td class="version-name">OS X Signé</td>
       <td> <span rel="popover" data-platform="osx_signed" data-title="OS X Signé" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_osx_signed"></div></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0%20update%205/OmegaT_3.6.0_05_Mac_Signed.zip/download" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 5/OmegaT_3.6.0_05_Mac_Signed.zip/download" role="button">Download</a></td></td>
   </tr><tr id="standard_osx_unsigned">
       <td class="version-name">OS X Non signé</td>
       <td> <span rel="popover" data-platform="osx_unsigned" data-title="OS X Non signé" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_osx_unsigned"></div></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0%20update%205/OmegaT_3.6.0_05_Mac.zip/download" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 5/OmegaT_3.6.0_05_Mac.zip/download" role="button">Download</a></td></td>
   </tr><tr id="standard_linux_jre">
       <td class="version-name">Linux avec JRE</td>
       <td></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0%20update%205/OmegaT_3.6.0_05_Linux.tar.bz2/download" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 5/OmegaT_3.6.0_05_Linux.tar.bz2/download" role="button">Download</a></td></td>
   </tr><tr id="standard_linux_jre64b">
       <td class="version-name">Linux avec JRE 64 bits</td>
       <td></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0%20update%205/OmegaT_3.6.0_05_Linux_64.tar.bz2/download" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 5/OmegaT_3.6.0_05_Linux_64.tar.bz2/download" role="button">Download</a></td></td>
   </tr><tr id="standard_linux_nojre">
       <td class="version-name">Cross-platform sans JRE</td>
       <td></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0%20update%205/OmegaT_3.6.0_05_Without_JRE.zip/download" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 5/OmegaT_3.6.0_05_Without_JRE.zip/download" role="button">Download</a></td></td>
   </tr><tr id="standard_webstart">
       <td class="version-name">Web Start</td>
       <td> <span rel="popover" data-platform="webstart" data-title="Web Start" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_webstart"></div></td>
-      <td><a class="btn btn-primary version-download" href="http://omegat.sourceforge.net/webstart/OmegaT.jnlp" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://omegat.sourceforge.net/webstart/OmegaT.jnlp" role="button">Download</a></td></td>
   </tr><tr id="standard_source">
       <td class="version-name">Code source</td>
       <td> <span rel="popover" data-platform="source" data-title="Code source" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_source"></div></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0%20update%205/OmegaT_3.6.0_05_Source.zip/download" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 5/OmegaT_3.6.0_05_Source.zip/download" role="button">Download</a></td></td>
   </tr></tbody>
 
 </table>
 
-<h3 id="latest">Version récente - 4.1.1_Beta</h3>
+<h3 id="latest">Version récente - OmegaT 4.1.2</h3>
 
 <p>La version récente (ou « Latest ») est plus actuelle que la version standard et intègre de nouvelles fonctionnalités. Globalement, elle est relativement stable, mais elle peut comporter des bogues. D&#39;autre part, sa documentation est moins détaillée, en particulier les informations concernant les nouvelles fonctions. Les utilisateurs qui ont l&#39;habitude d&#39;OmegaT préfèrent souvent la dernière version.</p>
 
@@ -316,39 +316,39 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
   <tbody><tr id="latest_windows_jre">
       <td class="version-name">Windows avec JRE</td>
       <td></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Latest/OmegaT%204.1.1/OmegaT_4.1.1_Beta_Windows.exe/download" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2/OmegaT_4.1.2_Beta_Windows.exe/download" role="button">Download</a></td></td>
   </tr><tr id="latest_windows_jre64b">
       <td class="version-name">Windows avec JRE 64 bits</td>
       <td></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Latest/OmegaT%204.1.1/OmegaT_4.1.1_Beta_Windows_64.exe/download" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2/OmegaT_4.1.2_Beta_Windows_64.exe/download" role="button">Download</a></td></td>
   </tr><tr id="latest_windows_nojre">
       <td class="version-name">Windows sans JRE</td>
       <td></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Latest/OmegaT%204.1.1/OmegaT_4.1.1_Beta_Windows_without_JRE.exe/download" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2/OmegaT_4.1.2_Beta_Windows_without_JRE.exe/download" role="button">Download</a></td></td>
   </tr><tr id="latest_osx_signed">
       <td class="version-name">OS X Signé</td>
       <td> <span rel="popover" data-platform="osx_signed" data-title="OS X Signé" data-content="" class="glyphicon glyphicon-info-sign"><!----></span> </td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Latest/OmegaT%204.1.1/OmegaT_4.1.1_Beta_Mac_Signed.zip/download" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2/OmegaT_4.1.2_Beta_Mac_Signed.zip/download" role="button">Download</a></td></td>
   </tr><tr id="latest_osx_unsigned">
       <td class="version-name">OS X Non signé</td>
       <td> <span rel="popover" data-platform="osx_unsigned" data-title="OS X Non signé" data-content="" class="glyphicon glyphicon-info-sign"><!----></span> </td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Latest/OmegaT%204.1.1/OmegaT_4.1.1_Beta_Mac.zip/download" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2/OmegaT_4.1.2_Beta_Mac.zip/download" role="button">Download</a></td></td>
   </tr><tr id="latest_linux_jre64b">
       <td class="version-name">Linux avec JRE 64 bits</td>
       <td></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Latest/OmegaT%204.1.1/OmegaT_4.1.1_Beta_Linux_64.tar.bz2/download" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2/OmegaT_4.1.2_Beta_Linux_64.tar.bz2/download" role="button">Download</a></td></td>
   </tr><tr id="latest_linux_nojre">
       <td class="version-name">Cross-platform sans JRE</td>
       <td></td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Latest/OmegaT%204.1.1/OmegaT_4.1.1_Beta_Without_JRE.zip/download" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2/OmegaT_4.1.2_Beta_Without_JRE.zip/download" role="button">Download</a></td></td>
   </tr><tr id="latest_webstart">
       <td class="version-name">Web Start</td>
       <td> <span rel="popover" data-platform="webstart" data-title="Web Start" data-content="" class="glyphicon glyphicon-info-sign"><!----></span> </td>
-      <td><a class="btn btn-primary version-download" href="http://omegat.sourceforge.net/webstart-dev/OmegaT.jnlp" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://omegat.sourceforge.net/webstart-dev/OmegaT.jnlp" role="button">Download</a></td></td>
   </tr><tr id="latest_source">
       <td class="version-name">Code source</td>
       <td> <span rel="popover" data-platform="source" data-title="Code source" data-content="" class="glyphicon glyphicon-info-sign"><!----></span> </td>
-      <td><a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Latest/OmegaT%204.1.1/OmegaT_4.1.1_Beta_Source.zip/download" role="button">Télécharger </a></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2/OmegaT_4.1.2_Beta_Source.zip/download" role="button">Download</a></td></td>
   </tr></tbody>
 
 </table>
@@ -380,7 +380,7 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
 
 <h3>Versions obsolètes</h3>
 
-<p>Vous pouvez télécharger <a href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Legacy/">d&#39;anciennes versions obsolètes</a> ​​d&#39;OmegaT.</p>
+<p>Vous pouvez télécharger <a href="http://sourceforge.net/projects/omegat/files/OmegaT - Legacy/">d&#39;anciennes versions obsolètes</a> ​​d&#39;OmegaT.</p>
 
 <p>Ces versions obsolètes sont des versions antérieures qui ont été remplacées. Pour la plupart des utilisateurs, elles sont sans intérêt  Certaines restrictions imposées par le système d&#39;exploitation ou la version Java utilisés pourront toutefois obliger certains utilisateurs à préférer une version plus ancienne.</p>
 
