--- a/de/documentation.html
+++ b/de/documentation.html
@@ -183,22 +183,14 @@
 <p>Eine Schnellstartanleitung, welche dich durch die wichtigsten Verfahren und Funktionen von OmegaT führt, wird beim Starten standardmäßig in der Benutzeroberfläche angezeigt</p>
 
 <p>Das Benutzerhandbuch kann auch aufgerufen werden ohne OmegaT zu starten. Es befindet sich im "docs" Order unterhalb des OmegaT Programmverzeichnisses.</p>
-
-<table>
-
-    <tr>
-
-      <td><?php $link='<a
-href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%20'.$standard_name.'/OmegaT_documentation_en.PDF/download"
->'; $endlink='</a>';?> <?php echo $link ?>Benutzerhandbuch online<?php echo $endlink ?></td>
-
-		<td>Das Benutzerhandbuch für OmegaT im PDF Format (OmegaT Version <?php echo $standard_name ?>).</td>
-
-		</tr>
-
+<table class="table">
+  <tr>
+    <td>
+      <a href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT 3.6.0 update 7/OmegaT_documentation_en.PDF/download">Benutzerhandbuch online</a>
+    </td>
+    <td>Das Benutzerhandbuch für OmegaT im PDF Format (OmegaT 3.6.0 update 7).</td>
+  </tr>
 </table>
-
-
 
 <h3>Übungen mit Anleitungen</h3>
 
