--- a/documentation.html
+++ b/documentation.html
@@ -177,9 +177,9 @@
   <table class="table">
     <tr>
       <td>
-        <a href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%203.6.0 update 5/OmegaT_documentation_en.PDF/download">User manual online</a>
+        <a href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT 3.6.0 update 7/OmegaT_documentation_en.PDF/download">User manual online</a>
       </td>
-      <td>The user manual for OmegaT in PDF format (OmegaT version 3.6.0 update 5).</td>
+      <td>The user manual for OmegaT in PDF format (OmegaT 3.6.0 update 7).</td>
     </tr>
     <tr>
       <td>
@@ -203,6 +203,19 @@
       </td>
       <td>By Susan Welsh (PDF format).</td>
     </tr>
+    <tr>
+      <td>
+        <a href="https://blog.wtigga.com/omegat/">В помощь переводчику: 10 советов по OmegaT</a>
+      </td>
+      <td>By Vladimir Zhdanov (in Russian).</td>
+    </tr>
+    <tr>
+      <td>
+        <a href="https://www.sutori.com/story/omegat">Recursos do OmegaT: primeiros passos</a>
+      </td>
+      <td>By Sheila Gomes (in Brasilian Portuguese).</td>
+    </tr>
+
   </table>
   <h3 id="howto">HOWTOs</h3>
   <p>"How to" documents on this site, containing information on certain procedures and features of OmegaT for advanced users which are not covered by the manual.</p>
